src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__float64__ceil_float64__sqlfunc_macro.snap
---
source: src/expr/src/scalar/func/impls/float64.rs
expression: info
---
Info {
    output_type_nullable: ColumnType {
        scalar_type: Float64,
        nullable: true,
    },
    output_type_nonnullable: ColumnType {
        scalar_type: Float64,
        nullable: false,
    },
    preserves_uniqueness: false,
    inverse: None,
    is_monotone: false,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: false,
}
